# fitme

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8455adbbd969_baseline_schema.py  a3c8f1b2e4d5_compress_activity_streams.py  b7d2c9e1f3a4_add_source_identity.py  baseline_baseline_schema.py  baseline_schema.py  de114c4ab66c_add_athlete_profile.py  notes_goals_config.py  reset_threshold_pace.py  sync_config.py
backend/app/: __init__.py  athlete.py  cli.py  concurrency.py  config.py  db.py  enums.py  main.py  models.py  repository.py  schemas.py  timeutil.py  types.py
backend/app/api/: __init__.py  activities.py  athletes.py  calendar.py  dashboard.py  eddington.py  goals.py  heatmap.py  imports.py  meta.py  milestones.py  rewind.py  serializers.py  sync.py
backend/app/coach/: __init__.py  agent.py  config.py  data_access.py  db.py  deps.py  models.py  provider.py  router.py  (+7 more)
backend/config/: athlete.yaml
backend/scripts/: generate_sample_export.py
backend/tests/: conftest.py  test_activity_filters.py  test_api.py  test_best_efforts.py  test_calorie_merge.py  test_coach.py  test_coach_isolation.py  test_dedup.py  test_eddington.py  test_elevation.py  test_garmin.py  test_goals.py  test_importer.py  test_intervals.py  test_merge.py  test_parallel.py  test_parsers.py  test_plausibility.py  test_search.py  test_stats.py  test_streams_analysis.py  test_sync.py  test_sync_api.py  test_threshold.py  test_vo2max.py
(+129 files in other folders)
